<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_general">
        <io.evercam.androidapp.custom.ThemedListPreference
            android:defaultValue="2"
            android:key="lstgridcamerasperrow"
            android:title="@string/title_camera_per_row"/>

        <io.evercam.androidapp.custom.ThemedListPreference
            android:defaultValue="0"
            android:key="prefsAwakeTime"
            android:entries="@array/prefs_sleep_entries"
            android:entryValues="@array/prefs_sleep_entry_values"
            android:title="@string/title_awake_time"/>

        <CheckBoxPreference
            android:key="prefsForceLandscape"
            android:title="@string/title_force_landscape"
            android:defaultValue="false"/>

        <CheckBoxPreference
            android:key="prefsShowOfflineCameras"
            android:title="@string/show_offline_camera"
            android:defaultValue="false"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_about">
        <Preference
            android:key="version_preference"
            android:title="@string/prefs_title_version"/>
        <Preference
            android:key="about_preference"
            android:title="@string/prefs_title_about"/>
    </PreferenceCategory>
</PreferenceScreen>